--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,52 @@
 
 /* Styles of new elements, not overrides, etc */
 
+/*
+
+Darkest purple - #9a1b5c
+ligher purple - #b0428e
+kind of pink - #dc5db5
+bright pink - #ff61da
+
+*/
+
 
 /************************************************/
 /* GENERAL */
 /************************************************/
-
-h3 {    
-    margin-top: 50px;
+h2 { color: #9a1b5c;}
+h3 {
+    margin-top: 35px;
     margin-bottom: 20px;
 }
+@media only screen and (min-width: 768px) { h3 { margin-top: 50px; }}
 h4 {
     text-transform: initial;
     font-weight: 500;
+    margin-bottom: 20px;
 }
 h5 {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    font-weight: 700;
 }
-span.h4-lead {
-    font-size: 12px;
-    color: #afafaf;
+p {
+    font-size: 16px;
 }
-section h2.section-heading {
-    color: #fbb200;
+body {
+    font-size: 16px;
 }
 
 /* Keep images from being huge */
 .img-cont img { width: 100%;}
-.img-cont { width: 100%; margin-top: 10px;}
-.img-caption { font-size: 8pt;}
+.img-cont { width: 100%; margin-top: 10px; padding-bottom: 5px;}
 @media only screen and (min-width: 992px) { .img-cont { margin: 0;} }
+.img-caption { font-size: 13px;}
 
 @media only screen and (min-width: 768px) { 
     .lead-in {
         padding-left: 20px;
-        border-left: 2px solid #ffde65;
+        border-left: 2px solid #b0428e;
     } 
     #home .lead-in { margin-bottom: 0;}
 }
@@ -52,20 +64,15 @@ section h2.section-heading {
 @media only screen and (min-width: 768px) { .intro-text {top: 30vh;} }
 .intro-heading { 
     position: relative;
-    font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    text-transform:uppercase;
     font-weight:700;
     color: white;
     padding-left: 10px;
     padding-right: 10px;
 }
-.intro-heading span {
-    color: #fff284;
-}
 #prototype-video { width: 100%; height: 80vh; }
 
 #home .img-cont { padding-bottom: 10px;}
-@media only screen and (min-width: 768px) { #home .img-cont {padding-bottom: 30px;} }
+/*@media only screen and (min-width: 768px) { #home .img-cont {padding-bottom: 30px;} }*/
 
 /* COVER VIDEO CSS */
 .homepage-hero-module {
@@ -111,15 +118,17 @@ section h2.section-heading {
 }
 /* END COVER VIDEO CSS */
 
-
+.secondary-lead-in {
+    border-top: 2px solid #e4e4e4;
+}
 @media only screen and (min-width: 768px) { 
     .secondary-lead-in {
         padding: 20px;
-        padding-bottom: 10px;
         border-left: 2px solid #e4e4e4;
+        border-top: none;
     }
     .secondary-lead-in h3 {
-        margin-top: 10px;
+        margin-top: 0px;
     }
 }
 
@@ -130,6 +139,7 @@ section h2.section-heading {
 #research { background-color: #fbfbfb;}
 
 .timeline { z-index: 100; }
+.timeline>li .timeline-image:hover { border: 3px solid #e6c1f5;}
 
 /* Fixing space between research intro and its subsections */
 #research-intro { margin-bottom: 10px; }
@@ -191,8 +201,8 @@ section h2.section-heading {
     border-bottom: 1px dashed #c1c9d0;
 }
 .diamond.focus .diamond-time {
-    color: #2b9cff;
-    border-bottom: 1px dashed #2b9cff;
+    color: #dc5db5;
+    border-bottom: 1px dashed #b0428e;
 }
 .diamond-fillcont {
     width: 100%;
@@ -241,6 +251,7 @@ section h2.section-heading {
 .design-section div {
     margin-left: 10px;
 }
+@media only screen and (max-width: 768px) { .design-section {padding-top: 30px;}}
 .design-section h4 {
     margin-top: 0;
 }
@@ -265,7 +276,9 @@ section h2.section-heading {
 .final-block { margin-bottom: 10px; }
 @media only screen and (min-width: 768px) {.final-block { margin-bottom: 0px; }}
 
-
+#final .img-cont {
+    /*margin-bottom: 5px;*/
+}
 
 
 
@@ -273,6 +286,9 @@ section h2.section-heading {
 /************************************************/
 /* ABOUT US */
 /************************************************/
+
+#about-us .row { margin-top: 10px; }
+@media only screen and (min-width: 768px) { #about-us .row { margin-top: 30px; } }
 
 .about-card { 
     clear: both;
@@ -282,6 +298,9 @@ section h2.section-heading {
 #about-us .img-cont {
     width: 110px;
     margin-right: 25px;
+}
+.about-card h5 {
+    margin-top: 5px;
 }
 @media only screen and (min-width: 768px) { #about-us .img-cont { width: 175px; }}
 @media only screen and (min-width: 768px) { #about-us .img-cont { width: 175px; }}
@@ -304,9 +323,10 @@ section h2.section-heading {
 /* FOOTER */
 /************************************************/
 footer {
-    background-color: #22262b;
-    color: white;
+    background-color: #e6e6e6;
+    color: #6f6f6f;
     padding: 50px 0;
+    font-size: 12px;
 }
 
 
